fixed middleware
